# weather-station

./: README.md  main.py  pyproject.toml
src/weather_station/database/: connection.py  data_insertion.py
src/weather_station/sensor/: data.py
